--- a/src/com/milkyway/GUI/DoiMatKhauJDialog.form
+++ b/src/com/milkyway/GUI/DoiMatKhauJDialog.form
@@ -221,6 +221,9 @@
                       <Image iconType="3" name="/com/milkyway/Icons/Tick.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="X&#xe1;c nh&#x1ead;n"/>
+                    <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                      <Color id="Hand Cursor"/>
+                    </Property>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDangNhapActionPerformed"/>
@@ -235,6 +238,9 @@
                       <Image iconType="3" name="/com/milkyway/Icons/Delete.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="H&#x1ee7;y b&#x1ecf;"/>
+                    <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                      <Color id="Hand Cursor"/>
+                    </Property>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelActionPerformed"/>
